deployments/deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-enhance-pack
  name: mysql-enhance-pack
  namespace: iop-saas-testing
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql-enhance-pack
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: mysql-enhance-pack
    spec:
      containers:
        - name: mysql-enhance-pack
          image: cowell-images.tencentcloudcr.com/cowellpi/mysql-enhance-pack:v0.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: web
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /mysql-enhance-pack/api/v1/health
              port: web
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /mysql-enhance-pack/api/v1/health
              port: web
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          volumeMounts:
          - name: tmp
            mountPath: /var/logs
            subPathExpr: $(POD_NAME)
          - name: mysql-enhance-pack-cm
            mountPath: /opt/config.yaml
            subPath: config.yaml
        - name: filebeat
          image: cowell-images.tencentcloudcr.com/app/cowellpi/filebeat7.5-kafka:v1
          imagePullPolicy: Always
          volumeMounts:
            - name: tmp
              mountPath: /var/logs
              subPathExpr: $(POD_NAME)
            - name: filebeat-config
              mountPath: /usr/local/filebeat-7.5.0/filebeat.yml
              subPath: filebeat.yml
      volumes:
        - name: tmp
          emptyDir: {}
        - name: mysql-enhance-pack-cm
          configMap:
            name: mysql-enhance-pack-cm
        - name: filebeat-config
          configMap:
            name: filebeat-config-mysql-enhance-pack
            items:
              - key: filebeat.yml
                path: filebeat.yml
      tolerations:
        - effect: NoSchedule
          key: OnlyAll
          operator: Exists
      imagePullSecrets:
        - name: cowell-image-dockercfg
      restartPolicy: Always
      terminationGracePeriodSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-enhance-pack
  name: mysql-enhance-pack
  namespace: iop-saas-testing
spec:
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: mysql-enhance-pack
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: mysql-enhance-pack-test
  namespace: iop-saas-testing
spec:
  selector:
    appc: istio-ingressgateway-tcp
  servers:
  - hosts:
    - isql-test.iop.cowelltech.com
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql-enhance-pack-test
  namespace: iop-saas-testing
spec:
  gateways:
  - mysql-enhance-pack-test
  hosts:
  - mysql-enhance-pack-test.iop.cowelltech.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mysql-enhance-pack
